[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch-cryoesp-calculator"
version = "0.1.0"
description = "Cryo-EM Electrostatic Potential calculator with PyTorch. Computes 3D ESP volumes from atom coordinates using Peng 1996 scattering factors."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Volodymyr Masalitin", email = "volodymyr.masalitin@ista.ac.at" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
# For Python 3.14, use PyTorch nightly: pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cpu
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "gemmi>=0.6.7",
    "tqdm>=4.60.0",
    "setuptools",  # Required by PyTorch's inductor compiler (torch.compile)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/volodymyr-masalitin/torch-cryoesp-calculator"

# https://peps.python.org/pep-0735/ - dependency groups for uv sync --group dev
[dependency-groups]
test = ["pytest>=7.0", "pytest-cov", "setuptools"]
dev = [{ include-group = "test" }]

# PyTorch nightly index for Python 3.14+ (torch.compile support)
[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

# For Python 3.14+, use PyTorch nightly builds which support torch.compile
[tool.uv.sources.torch]
index = "pytorch-nightly"
marker = "python_version >= '3.14'"

[tool.hatch.build.targets.wheel]
packages = ["src/cryoesp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--color=yes"
filterwarnings = [
    # Ignore PyTorch deprecation warnings (from PyTorch's internal code)
    "ignore::DeprecationWarning:torch.jit",
    "ignore::DeprecationWarning:torch.utils.mkldnn",
]

[tool.coverage.run]
source = ["cryoesp"]
